src/Previewer.css
@media print {
  body * {
    visibility: hidden;
  }
  #preview,
  #preview * {
    visibility: visible;
  }
  #preview {
    position: absolute;
    left: 0;
    top: 0;
  }
}

#root {
  min-height: 100vh;
  background-color: beige;
}

.appWrapper {
  margin: auto;
  max-width: 1300px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.container {
  border: 3px solid black;
  margin: 1em;
  background-color: white;
}

.editorContainer {
  height: fit-content;
  flex-grow: 1;
}

.previewContainer {
  width: 700px;
}

.disabled {
  position: absolute;
  right: 100%;
}

.focused {
    flex-grow: 1;
    width: initial;
    max-width: 850px;
}

.focused textarea {
    overflow-y: visible;
}

.header {
  background-color: brown;
  color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 0.2rem;
}

.header > * {
  margin: 0.2rem;
}

.actionsNav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.actionsNav > * {
  margin: 0 0.2rem;
}

textarea.content {
  width: 97%;
}

.content {
  padding: 0.5em;
}

.icon {
  width: 1.5em;
  height: 1.5em;
  margin: 0 0.3em;
  background-repeat: no-repeat;
  background-size: 70%;
  background-position: center;
  border-radius: 50%;
  background-color: white;
  cursor: pointer;
}
.icon:hover {
  /*background-color: #5ad5d5ff;*/
  background-color: beige;
}
#printIcon {
  background-image: url('icons/print-icon.png');
}
#copyIcon {
  background-image: url('icons/copy-icon.png');
  background-size: 65%;
}
.fullscreenBtn {
  background-image: url('icons/fullscreen-icon.png');
  background-size: 60%;
}

